update example config

--- a/example_nextflow.config
+++ b/example_nextflow.config
@@ -1,9 +1,22 @@
 params {
     input_dir = "/path/to/images"
     output_dir = "${launchDir}/output"
+    metadata_regex = "(?P<Plate>[A-Za-z0-9\\-\\s]*)_(?P<Well>[A-Z][0-9]{2})_s(?P<Site>[0-9])_w(?P<ChannelNumber>[0-9])" // Regular expression for decoding metadata from file names, needed for creating sample sheet before launching pipeline
+
+    // Segmentation options
+    nuc_size = 40 // expected diameter of nucleus, in pixels
+    cell_size = 60 // expected diameter of cell, in pixels
+    min_cell_size = 200 // minimum area in pixels, set to 0 to disable
+    dna_channel = 0 // Index of channel containing DNA stain. Often w1 = 0
+    membrane_channel = 3 // Index of channel containing membrane stain. Often w4 = 3
+    nuc_model = "cyto" // Cellpose model for segmenting nuclei
+    cell_model = "cyto2" // Cellpose model for segmenting cell boundaries
+
+    // Naming options
+    channel_names = ["W1","W2","W3","W4","W5"] // Names of channels, usually W1-X or named channels (e.g. DNA, ER, ...)
+    mask_names = ["Cells","Nuclei","Cytoplasm"] // Names of masks after segmentation, usually Cells, Nuclei, Cytoplasm
+
     pipeline_report_dir = "${launchDir}/reports"
-    platemap = "/path/to/platemap.csv" // platemap with metadata
-    neg_control = "Control" // corresponds to entries in your platemap.csv file.
 }
 
 report {
@@ -13,19 +26,19 @@ report {
 }
 
 timeline {
-    enabled = true
+    enabled = false
     overwrite = true
     file = "${->params.pipeline_report_dir}/timeline.html"
 }
 
 trace {
-    enabled = true
+    enabled = false
     overwrite = true
     file = "${->params.pipeline_report_dir}/trace.txt"
 }
 
 dag {
-    enabled = true
+    enabled = false
     overwrite = true
     file = "${->params.pipeline_report_dir}/pipeline.svg"
 }
